# DashTrade

./: .env.example  .gitignore  .replit  ADMIN_CODE_SETUP.md  ADMIN_CODE_TROUBLESHOOTING.md  ADMIN_SETUP.md  ALPACA_DATA_FEED_INFO.md  API_DOCUMENTATION.md  ARCHITECTURE_ANALYSIS.md  AUTHENTICATION_SETUP.md  AUTO_UPDATE_PENDING_ORDERS.md  AZURE_DEPLOYMENT_GUIDE.md  BACKEND_CLOSE_ORDERS_VERIFICATION.md  BASE44_AI_PROMPT.md  BASE44_SUBMISSION_PROMPT.txt  Base-Machine-system_architecture.md  Base-Machine-system_readme.md  CLOSE_ORDER_DEBUG.md  CLOSE_ORDER_FIX.md  CLOSE_ORDER_UPDATE_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  EMAIL_NOTIFICATION_SETUP.md  EXECUTIVE_SUMMARY.md  FRONTEND_API_DOCUMENTATION.md  FRONTEND_BACKEND_CHANGES.md  FRONTEND_BACKEND_COMMUNICATION.md  FRONTEND_IMPLEMENTATION_GUIDE.md  FRONTEND_QUICK_SUMMARY.md  FRONTEND_TRADE_DETAIL_GUIDE.md  FRONTEND_UPDATE_GUIDE.md  GITHUB_ACTIONS_SETUP.md  INVESTIGATION_CLOSE_ORDERS.md  LOVABLE_FRONTEND_SPEC.md  PASSWORD_RESET_DEBUG.md  PASSWORD_RESET_VERIFICATION.md  PNL_CALCULATION_FIX.md  PNL_FIX_SUMMARY.md  PNL_INVESTIGATION.md  PNL_ISSUE_SUMMARY.md  (+96 more)
.streamlit/: config.toml
Front-end/: .env.example  nixpacks.toml  tailwind.config.ts  vite.config.ts
attached_assets/: Pasted-ImportError-background-gradient-requires-matplotlib-Traceback-File-home-runner-workspace-pytho-1761447850033_1761447850034.txt
deployment/: DEPLOYMENT_GUIDE.md  database_setup.sql  deploy-from-local.sh  deploy.sh  quick-deploy.sh  update.sh
migrations/: 001_create_bot_tables.sql  002_add_bot_webhook_token.sql  002_system_strategies.sql  (+6 more)
(+34 files in other folders)
